Commit for blog

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/qbxBanner
+spring.datasource.url=jdbc:postgresql://localhost:5432/qbxbanner
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto = update
+server.port=8081
