--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto = update
 server.port=8081
+spring.mvc.converters.preferred-json-mapper=gson
